# talentclaw

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  SKILL.md  next.config.ts  package.json  tsconfig.json  tsup.config.ts  vercel.json  vitest.config.ts
.claude-plugin/: .mcp.json  plugin.json  settings.json
.github/workflows/: ci.yml  desktop-build.yml  release.yml
app/: actions.ts  error.tsx  globals.css  layout.tsx  page.tsx
app/(workspace)/: error.tsx  layout.tsx
app/actions/: jobs.ts  messages.ts  profile.ts
app/pipeline/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
apps/cli/: package.json
cli/: Cargo.toml
cli/crates/talentclaw/: Cargo.toml
cli/crates/talentclaw/src/: frontmatter.rs  helpers.rs  main.rs  search.rs  types.rs
cli/crates/talentclaw/src/bootstrap/: checklist.rs  credentials.rs  detect_runtime.rs  gateway.rs  install_coffeeshop.rs  install_runtime.rs  install_skill.rs  mod.rs  scaffold.rs  server.rs
components/: coffeeshop-logo.tsx  crab-logo.tsx  data-refresh-provider.tsx
desktop/: electron-builder.config.ts  first-run.ts  main.ts  preload.ts
lib/: agent-prompts.ts  agent-security.ts  analytics.ts  api-auth.ts  cache.ts  career-graph-data.ts  deps.ts  document.ts  fs-data.ts  graph-data.ts  match-scoring.ts  pdf-gen.ts  slugify.ts  test-helpers.ts  theme.ts  types.ts  ui-utils.ts
persona/: SOUL.md
plugin/: .mcp.json  README.md
references/: APPLICATION-PLAYBOOK.md  TOOLS.md
scripts/: publish.sh  seed.ts  setup.sh
skills/: SKILL.md  package.json
(+152 files in other folders)
