[package]
name = "talentclaw"
version = "0.4.0"
edition = "2024"
description = "talentclaw CLI — your AI career agent"
license = "MIT"

[[bin]]
name = "talentclaw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dialoguer = "0.11"
console = "0.15"
which = "7"
open = "5"
dirs = "6"
ctrlc = "3.4"
regex = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
